crates/macros/tests/ui/http_client/fail/conflicting_arg_attrs.stderr
error: argument `id` carries conflicting binding attributes; use exactly one of #[path], #[query], #[header], #[body]
 --> tests/ui/http_client/fail/conflicting_arg_attrs.rs:8:33
  |
8 |     async fn get(&self, #[path] #[query] id: String) -> Result<(), ClientError>;
  |                                 ^^^^^^^^
